# eth-advanced-systems-lab-ss2022

./: .gitignore  CMakeLists.txt  README.md  create.sh
benchmark/: ArgParser.h  BenchMarkingUtils.h  benchmark_utils.h  graph_generation.cpp  graph_generation.h  main.cpp
code_generator/: code_generator.py  instrumented_intrinsics.json
doc/: plot.ipynb
graphs/: adjacency_graph.cpp  adjacency_graph.h  graph_generation.cpp  graph_generation.h  graph_generation_util.cpp  graph_generation_util.h
input/: sample.txt  sample2.txt  sample_undirected.txt
runexp/: README.md  all_test.sh  clustered_bar.py  clustered_bar.sh  clustered_bar_old.py  clustered_bar_old.sh  env.sh  etest.sh  etest_density.sh  fhtest_density.sh  ftest.sh  ftest_density.sh  generate_graph.py  plot.py  plot_all.py  plot_density.py  plot_n.py  plot_node.py  plot_speedup.py  plotf.sh  plotfh.sh  plotit.sh  rename.json  roofline.py  run.sh  run_all_graphs.sh  run_all_graphs_old.sh  run_density.sh  run_density_high_degree.sh  run_density_old.sh  run_node.sh  run_old.sh  test.py  vid.json
runexp/old_versions/: plot.py  run.sh
runexp/roofline_example/: data.csv  generated_1_1000_25000.csv  generated_1_1500_56250.csv  generated_1_2000_100000.csv  generated_1_2500_156250.csv  generated_1_2500_156250.txt  generated_1_500_6250.csv  qn.csv
runexp/tests/: run_node.sh
src/: AdjacencyGraph.cpp  AdjacencyGraph.h  Common.h  EdgeIterator.cpp  EdgeIterator.h  Forward.cpp  Forward.h  adjacency_graph.c  adjacency_graph.cpp  adjacency_graph.h  adjacency_graph_hashed.cpp  adjacency_graph_hashed.h  common.c  common.cpp  common.h  dummy_helper.hpp  edge_iterator.c  edge_iterator.cpp  edge_iterator.h  edge_iterator.hpp  forward.c  forward.cpp  forward.h  forward.hpp  forward_hashed.cpp  forward_hashed.h  forward_hashed.hpp  forward_hashed_v2.hpp  hash_table.cpp  hash_table.h  hash_table.hpp  hash_table_v1.hpp  instrumented_index.cpp  instrumented_index.h  merge_sort.h  merge_sort_base.h  merge_sort_v2.h  merge_sort_v4.h  quick_cut_sort.h  quick_sort.h  (+2 more)
src/edge_iterator/: edge_iterator_all_versions.h  edge_iterator_all_versions_instrumented.cpp  edge_iterator_base.cpp  edge_iterator_base.hpp  edge_iterator_base_instrumented.cpp  edge_iterator_m1.cpp  edge_iterator_m1.hpp  edge_iterator_u4.cpp  edge_iterator_u4.hpp  edge_iterator_u5.cpp  edge_iterator_u5.hpp  edge_iterator_u6.cpp  edge_iterator_u6.hpp  edge_iterator_u7.cpp  edge_iterator_u7.hpp  edge_iterator_v1.cpp  edge_iterator_v1.hpp  edge_iterator_v2.cpp  edge_iterator_v2.hpp  edge_iterator_v3.cpp  edge_iterator_v3.hpp  edge_iterator_v4.cpp  edge_iterator_v4.hpp  edge_iterator_va.cpp  edge_iterator_va.hpp  edge_iterator_vec4.cpp  edge_iterator_vec4.hpp  edge_iterator_vec5.cpp  edge_iterator_vec5.hpp  edge_iterator_vec6.cpp  edge_iterator_vec6.hpp
src/forward/: forward_all_versions.h  forward_base.cpp  forward_base.hpp  forward_base_instrumented.cpp  forward_u4.cpp  forward_u4.hpp  forward_v1 copy 2.hpp  forward_v1.cpp  forward_v1.hpp  forward_v2.cpp  forward_v2.hpp  forward_v3.cpp  forward_v3.hpp  forward_v4.cpp  forward_v4.hpp  forward_v5.cpp  forward_v5.hpp  forward_v6.cpp  forward_v6.hpp  forward_va.cpp  forward_va.hpp  forward_vpi.cpp  forward_vpi.hpp
src/forward_hashed/: forward_hashed_all_versions.h  forward_hashed_all_versions_instrumented.cpp  forward_hashed_base.cpp  forward_hashed_base.hpp  forward_hashed_base_instrumented.cpp  forward_hashed_std.cpp  forward_hashed_std.hpp  forward_hashed_v1.cpp  forward_hashed_v1.hpp  forward_hashed_v1_instrumented.cpp  forward_hashed_v1a.cpp  forward_hashed_v1a.hpp  forward_hashed_v2.cpp  forward_hashed_v2.hpp  forward_hashed_v2_instrumented.cpp  forward_hashed_v3.cpp  forward_hashed_v3.hpp  forward_hashed_v4.cpp  forward_hashed_v4.hpp  forward_hashed_v4a.cpp  forward_hashed_v4a.hpp  forward_hashed_v5.cpp  forward_hashed_v5.hpp  forward_hashed_va.cpp  forward_hashed_va.hpp  hash_table.hpp  hash_table_base.hpp  hash_table_common.h  hash_table_std.hpp  hash_table_v1.hpp  hash_table_v1a.hpp  hash_table_v2.hpp  hash_table_v3.hpp  hash_table_v4.hpp  hash_table_v4a.hpp  hash_table_v5.hpp  hash_table_va.hpp
src/merge_sort/: merge_sort_all_versions.h  merge_sort_all_versions_instrumented.cpp  merge_sort_base.cpp  merge_sort_base.h  merge_sort_base_instrumented.cpp  merge_sort_v2.cpp  merge_sort_v2.h  merge_sort_v2_instrumented.cpp  merge_sort_v3.cpp  merge_sort_v3.h  merge_sort_v4.cpp  merge_sort_v4.h
test/: a.out  merge_sort.cpp
tests/: adjacent_graph_test.cpp  edge_iterator_test.cpp  example_test.cpp  forward_hashed_test.cpp  forward_test.cpp  instrumented_index_test.cpp  merge_sort_test.cpp  test_main.cpp  triangles.h
